# pycroservice

./: .env  pyproject.toml  requirements.txt
src/pycroservice/: core.py  crypto.py
